kubernetes/apps/observability/grafana/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: &name grafana-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: &route grafana
  oidc:
    provider:
      issuer: "https://auth.${SECRET_DOMAIN}"
    clientID: *route
    clientSecret:
      name: *name
    redirectURL: "https://grafana.${SECRET_DOMAIN}/login/generic_oauth"
    logoutPath: "/logout"
